--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ a{
 .class_nav{
  font-size: 16px;
  font-weight: 500;
- line-height: 24px;
+ line-height: 1.5;
  letter-spacing: 0.02em;
  color:#2E2F42;
 }
@@ -38,7 +38,7 @@ a{
 .adress_link{
   font-size: 16px;
   font-weight: 400;
-  line-height: 24px;
+  line-height: 1.5;
   letter-spacing: 0.02em;
   color:#434455;
 }
@@ -60,7 +60,7 @@ color:#FFFFFF;
   color: #FFFFFF;
   font-size: 16px;
   font-weight: 500;
-  line-height: 24px;
+  line-height: 1.5;
   letter-spacing: 0.04em;
   cursor: pointer;
 }
