--- a/css/style.css
+++ b/css/style.css
@@ -35,14 +35,14 @@ a{
 .class_nav:focus, .class_nav:hover{
   color: #404bbf;
 }
-.link-header{
+.link_header{
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #2e2f42;
 }
-.link-header:focus, .link-header:hover{
+.link_header:focus, .link_header:hover{
     color: #404bbf;
 }
 .adress_link{
